[RESTEASY-2595] Add getLinks method with a custom class loader